# CiweimaoDownloader

./: .gitignore  BUILD.md  README.md  build.ps1  main.py  pyproject.toml  requirements.txt  setting.yaml
.github/workflows/: python-app.yml
decrypted/: readme.md
src/: asyncHttp.py  config.py  epubUtils.py  main.py  models.py  requestUtils.py  tools.py
wiki/: readme.md
